Fixed bug where p tag overflowed

--- a/src/components/ContactUsComponent/ContactUs.css
+++ b/src/components/ContactUsComponent/ContactUs.css
@@ -53,6 +53,7 @@
 
 .container .contactInfo .box .text small, p {
     margin-left: 10px;
+    word-wrap: break-word;
 }
 
 .container .contactInfo .box .text small {
